2009-12-20  Jan Moringen  <scymtym@users.sourceforge.net>

	* rudel.el (rudel-user::rudel-display-string): moved to
	rudel-display.el
	* rudel-display.el: new file; functions that create text
	representations of Rudel objects
	* obby/rudel-obby-display.el: new file; functions that create text
	representations of obby objects
	* obby/Project.ede (target obby): added rudel-display.el
	* Project.ede (target rudel): added rudel-display.el

	* TODO (Future): removed duplicate task SubEthaEdit client
	functionality
	(Milestone 0.3): use transports is done

	* obby/rudel-obby-server.el
	(rudel-obby-server-state-idle::rudel-obby/obby_document):
	(rudel-obby-server-state-idle::rudel-obby/obby_document/record):
	use `rudel-dispatch' instead of `rudel-obby-dispatch'

	* INSTALL (INSTALLING): link to REQUIREMENTS
	(COMPILING): link to rudel-compile.el

	* doc/notes-for-developers.org: new file; some notes which may be
	relevant for Rudel developers

	* rudel-debug.el (local variables): prevent byte-compilation
	* obby/rudel-obby-debug.el (header): downcased keywords
	(local variables): prevent byte-compilation

	* rudel.el (rudel-user::rudel-change-notify): new method; run
	change hook
	* obby/rudel-obby-server.el
	(rudel-obby-server-state-idle::rudel-obby/obby_user_colour): call
	`rudel-change-notify' instead of `object-run-hook-with-args' after
	modifying the user object
	* obby/rudel-obby-client.el
	(rudel-obby-client-state-idle::rudel-rudel-obby/net6_client_join):
	call `rudel-change-notify' after modifying the user object

2009-12-19  Jan Moringen  <scymtym@users.sourceforge.net>

	* obby/rudel-obby.el (rudel-ask-connect-info): when extracting
	properties from info list, there is no need to ensure info being
	non-nil

	* rudel.el (rudel-host-session): pass partial info list to
	`rudel-ask-host-info'; cleanup; extended documentation string
	* obby/rudel-obby.el (rudel-obby-backend::rudel-ask-host-info):
	try extract address and port from info list before prompting
